# loco_framework

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/loco_framework/: hungarian.hpp  loco_node.hpp  loco_platoon.hpp  odometry_buffer.hpp  pose.hpp  utils.hpp
include/loco_framework/estimators/: loco_estimator.hpp  platoon_estimator.hpp
msg/: DetectionArray.msg  PlatoonDetection.msg  PlatoonDetectionArray.msg
scripts/: platoon_introspection_test.py
src/: loco_main.cpp  loco_platoon.cpp
src/loco_framework/: hungarian.cpp  loco_node.cpp  loco_platoon_node.cpp  odometry_buffer.cpp  pose.cpp
src/loco_framework/estimators/: loco_estimator.cpp  platoon_estimator.cpp
test/: hungarian_test.cpp  loco_estimator_test.cpp  mrpt_pose_test.cpp  odometry_buffer_test.cpp  platoon_estimator_test.cpp
